--- a/API/Dockerfile
+++ b/API/Dockerfile
@@ -9,7 +9,7 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Копируем наши файлы в контейнер
-COPY  /app .
+COPY  app API/app/
 
 # Запускаем основной файл
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+CMD ["uvicorn", "API.app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
