--- a/dashboard/requirements.txt
+++ b/dashboard/requirements.txt
@@ -9,7 +9,6 @@ numpy>=1.24.0
 
 # Visualization
 plotly>=5.15.0
-streamlit-plotly-events>=0.0.7
 
 # Statistics and Analysis
 scipy>=1.10.0
@@ -25,4 +24,14 @@ requests>=2.31.0
 jsonschema>=4.17.0
 
 # Optional: For better performance
-numba>=0.57.0 
+numba>=0.57.0
+
+streamlit-plotly-events==0.0.6
+
+seaborn==0.13.2
+
+statsmodels==0.14.5
+
+httpx==0.28.1
+
+pydantic==2.11.7
